--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "css-loader": "^5.0.1",
     "extract": "^1.0.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
